--- a/src/global/global.css
+++ b/src/global/global.css
@@ -1,6 +1,8 @@
 * {
     @import url ( "https://fonts.googleapis.com/css2? family = Roboto: wght @ 300 & display = swap");
-    font-family: "Roboto", sans-serif;
+    @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
+    /* font-family: "Roboto", sans-serif; */
+    font-family: "Poppins", sans-serif;
     font-size: 14px;
-    color: rgb(0, 0, 0);
+    color: rgb(51, 49, 49);
 }
