--- a/src/global/global.css
+++ b/src/global/global.css
@@ -6,3 +6,32 @@
     font-size: 14px;
     color: rgb(51, 49, 49);
 }
+
+
+/* width */
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+
+/* Track */
+
+::-webkit-scrollbar-track {
+    background: #f1f1f1;
+}
+
+
+/* Handle */
+
+::-webkit-scrollbar-thumb {
+    background: rgb(196, 196, 196);
+    border-radius: 10px;
+}
+
+
+/* Handle on hover */
+
+::-webkit-scrollbar-thumb:hover {
+    background: rgb(121, 121, 121);
+}
